default-features config